[gd_scene load_steps=7 format=2]

[ext_resource path="res://ArtAssets/redmaterial.tres" type="Material" id=1]
[ext_resource path="res://Objects/Clicker.gd" type="Script" id=2]
[ext_resource path="res://ArtAssets/bluematerial.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1, 1, 1 )

[node name="Clicker" type="StaticBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RedMesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="BlueMesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_Clicker_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Clicker_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Clicker_mouse_exited"]
